jb-4 feature: added routing for image -> calorie calculation functionality
